--- a/.github/workflows/cpu-tests.yaml
+++ b/.github/workflows/cpu-tests.yaml
@@ -40,9 +40,9 @@ jobs:
 
       - name: Install packages
         run: |
-          python -m pip install -U pip
-          python -m pip install swig
-          python -m pip install -e .[atari,box2d,test,dev]
+          pip install -U pip
+          pip install swig
+          pip install -e .[atari,box2d,test,dev]
 
       - name: Run tests
         run: |
