--- a/.github/workflows/cpu-tests.yaml
+++ b/.github/workflows/cpu-tests.yaml
@@ -38,16 +38,13 @@ jobs:
             requirements.txt
             setup.py
 
-      - name: install swig
-        uses: johnwason/swig-build-action@v1
-        with:
-          version: 4.0.2
-          cache-key: ''
-
-      - name: Install packages
+      - name: Install packages 1
         run: |
           pip install -U pip
           pip install swig
+      
+      - name: Install packages 2
+        run: |
           pip install -e .[atari,box2d,test,dev]
 
       - name: Run tests
