--- a/.github/workflows/cpu-tests.yaml
+++ b/.github/workflows/cpu-tests.yaml
@@ -44,11 +44,20 @@ jobs:
           python -m venv env
           source env/bin/activate
 
-      - name: Install packages
+      - name: Install packages Windows
+        if: runner.os == 'Windows'
+        run: |
+          env/Source/activate
+          python -m pip install -U pip
+          python -m pip install swig
+          python -m pip install -e .[atari,box2d,test,dev]
+      - name: Install packages Linux
+        if: runner.os != 'Windows'
         run: |
           source env/bin/activate
-          pip install swig
-          pip install -e .[atari,box2d,test,dev]
+          python -m pip install -U pip
+          python -m pip install swig
+          python -m pip install -e .[atari,box2d,test,dev]
 
       - name: Run tests
         run: |
