--- a/.github/workflows/cpu-tests.yaml
+++ b/.github/workflows/cpu-tests.yaml
@@ -46,19 +46,20 @@ jobs:
       - name: Install packages Windows
         if: runner.os == 'Windows'
         run: |
-          env\Scripts\activate
-          python -m pip install -U pip
+          env\Scripts\activate.bat
+          pip install -U pip
           pip install swig
-          python -m pip install -e .[atari,box2d,test,dev]
+          pip install -e .[atari,box2d,test,dev]
 
       - name: Install packages Linux
         if: runner.os != 'Windows'
         run: |
           source env/bin/activate
-          python -m pip install -U pip
+          pip install -U pip
           pip install swig
-          python -m pip install -e .[atari,box2d,test,dev]
+          pip install -e .[atari,box2d,test,dev]
 
       - name: Run tests
         run: |
+          source env/bin/activate
           python tests/run_tests.py
