--- a/.github/workflows/cpu-tests.yaml
+++ b/.github/workflows/cpu-tests.yaml
@@ -38,27 +38,25 @@ jobs:
             requirements.txt
             setup.py
 
-      - name: Create venv
-        run: |
-          pip install -U pip
-          python -m venv env
+      # - name: Create venv
+      #   run: |
+      #     pip install -U pip
+      #     python -m venv env
 
-      - name: Install packages Windows
-        if: runner.os == 'Windows'
-        run: |
-          env\Scripts\activate.bat
-          pip install -U pip
-          pip install swig
-          pip install -e .[atari,box2d,test,dev]
+      # - name: Install packages Windows
+      #   if: runner.os == 'Windows'
+      #   run: |
+      #     env\Scripts\activate.bat
+      #     pip install -U pip
+      #     pip install swig
+      #     pip install -e .[atari,box2d,test,dev]
 
       - name: Install packages Linux
-        if: runner.os != 'Windows'
+        # if: runner.os != 'Windows'
         run: |
-          source env/bin/activate
           pip install swig
           pip install -e .[atari,box2d,test,dev]
 
       - name: Run tests
         run: |
-          source env/bin/activate
           python tests/run_tests.py
