--- a/.github/workflows/cpu-tests.yaml
+++ b/.github/workflows/cpu-tests.yaml
@@ -46,7 +46,10 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           env\\Scripts\\activate
-          echo "VIRTUAL ENV:" $env:VIRTUAL_ENV
+          echo $env:VIRTUAL_ENV
+          echo $env:virtual_env
+          echo $VIRTUAL_ENV
+          echo %VIRTUAL_ENV%
           pip install swig
           pip install -e .[atari,box2d,test,dev]
 
