--- a/.github/workflows/cpu-tests.yaml
+++ b/.github/workflows/cpu-tests.yaml
@@ -45,11 +45,11 @@ jobs:
       - name: Install packages Windows
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          env\\Scripts\\activate
-          echo "VIRTUAL_ENV: %VIRTUAL_ENV%"
+          env\\Scripts\\Activate.ps1
+          Write-Host "VIRTUAL_ENV: $env:VIRTUAL_ENV"
           pip install swig
           pip install -e .[atari,box2d,test,dev]
-        shell: cmd
+        shell: powershell
 
       - name: Install packages Linux
         if: ${{ matrix.os == 'ubuntu-latest' }}
@@ -61,9 +61,9 @@ jobs:
       - name: Run tests Windows
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          env\\Scripts\\activate
+          env\\Scripts\\Activate.ps1
           python tests/run_tests.py
-        shell: cmd
+        shell: powershell
 
       - name: Run tests Linux
         if: ${{ matrix.os == 'ubuntu-latest' }}
